--- a/src/components/LandingPage.css
+++ b/src/components/LandingPage.css
@@ -1,6 +1,6 @@
 
 body {
-    background: url('https://familyreadingcorner.files.wordpress.com/2016/07/reading-in-nature.jpg') no-repeat fixed center center;
+    background: url('../images/tablebook.jpg') no-repeat fixed center center;
     background-size: cover;
 }
 
@@ -24,6 +24,7 @@ body {
 }
 /* //OTHER IMAGES: */
 /* https://www.pexels.com/search/reading/ */
+/* https://www.pexels.com/photo/person-holding-and-reading-book-during-daytime-115001/ */
 /* https://unsplash.com/photos/1MHU3zpTvro */
 /* READING NEAR LAKE, BOOK PILE: https://data.whicdn.com/images/3896534/large.jpg */
 /* BOOKS IN SUN: http://www.romanicalumea.ro/wp-content/uploads/2017/03/book.jpg */
