--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -41,7 +41,7 @@ a:hover {
 .user-nav-btn, .visitor-nav-btn {
     cursor: pointer;
     font-size: 1.25rem;
-    background: #2b8beb;
+    background: #3498db;
     border: 1px solid gray;
     text-decoration: none;
     color: white;
