--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,17 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,700");
+
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  font-family: 'Roboto';
 }
+
 
 body {
   /* margin: 0; */
   /* padding: 0; */
-  font-family: Garamond sans-serif;
+  font-family: 'Roboto' Garamond sans-serif;
 }
 
 input {
@@ -22,14 +26,14 @@ input {
 button {
   padding: 1%;
   margin: 1.5%;
-  background: #1abc9c;
+  background: #2F93D6;
   color: white;
   font-size: 1.2rem;
   border: 1px solid black;
 }
 
 button:hover {
-  color: #1abc9c;
+  color: #2F93D6;
   background: white;
 }
 
